# NoteCAD

./: .gitignore  .gitmodules  Assembly-CSharp.csproj  NoteCAD.Editor.csproj  NoteCAD.csproj  NoteCAD.sln  NoteCAD.userprefs  README.md
.github/workflows/: build.yml
Assets/: Macroshape.NoteCAD.asmdef  package.json
Assets/BuiltinFiles/: LineStyle.xml  Translation.csv  Translation.ods
Assets/Code/: Test.cs
Assets/Code/Behaviours/: ButtonContent.cs  ConstraintBehaviour.cs  EntityBehaviour.cs  EntityConfig.cs  LineBehaviour.cs  LineCanvas.cs  PointBehaviour.cs
Assets/Code/CSG/: Formats.cs  Octree.cs  Polygon.cs  Solid.cs  Solids.cs  Tree.cs  Vector.cs
Assets/Code/Constraints/: AngleConstraint.cs  CirclesDistance.cs  Constraint.cs  ConstraintExp.cs  Diameter.cs  DisplayLink.cs  Equal.cs  EqualLineLine.cs  EqualValue.cs  EquationConstraint.cs  Fixation.cs  HVConstraint.cs  Length.cs  LineCircleDistance.cs  LineLineDistance.cs  Parallel.cs  Perpendicular.cs  PointCircleDistance.cs  PointLineDistance.cs  PointOn.cs  PointOnLine.cs  PointsCoincident.cs  PointsDistance.cs  Tangent.cs
Assets/Code/DetailEditor/: DetailEditor.cs  FeatureUI.cs  OptionsUI.cs  StylesUI.cs  UndoRedo.cs
Assets/Code/DraftStroke/: DashAtlas.cs  DraftLines.shader  DraftLinesDepthOff.shader  DraftStroke.cs  DraftStroke.mat  DraftStrokeDepthOff.mat  StrokeStyles.cs
Assets/Code/Entities/: ArcEntity.cs  CircleEntity.cs  EllipseEntity.cs  EllipticArcEntity.cs  Entity.cs  FunctionEntity.cs  ImageEntity.cs  ImageEntity.shader  LineEntity.cs  OffsetEntity.cs  PointEntity.cs  SplineEntity.cs  TextEntity.cs
Assets/Code/Features/: Detail.cs  Extrusion.cs  ExtrusionFeature.cs  Feature.cs  LinearArrayFeature.cs  MeshImportFeature.cs  RevolveFeature.cs  SketchFeature.cs  SketchFeatureBase.cs  SliceFeature.cs
Assets/Code/Geometry/: BBox.cs  CsgBooleanOperations.cs  GeomUtils.cs  GeometryKernel.cs  IBooleanOperations.cs  MeshUtils.cs  OBB.cs  OccBooleanOperations.cs  STLExport.cs  Triangulation.cs
Assets/Code/Poisson/: Replay.cs
Assets/Code/Sketch/: IdPath.cs  LoopId.cs  Sketch.cs  SketchObject.cs  Styles.cs
Assets/Code/Solver/: EquationSystem.cs  ExpBasis.cs  ExpVector.cs  Expression.cs  GaussianMethod.cs  NewtonSolver.cs
Assets/Code/Tools/: AngleTool.cs  ArcTool.cs  CircleTool.cs  CopyTool.cs  DistanceTool.cs  EllipseTool.cs  EllipticArcTool.cs  EqualTool.cs  EquationTool.cs  ExportCurrentSTLTool.cs  ExportSTLTool.cs  ExtrusionTool.cs  FixTool.cs  FullscreenTool.cs  FunctionTool.cs  HVTool.cs  HelpTool.cs  ImageTool.cs  ImportDXFTool.cs  ImportSTLTool.cs  LengthTool.cs  LineTool.cs  LinearArrayTool.cs  LoadTool.cs  MidPointTool.cs  MoveTool.cs  NewTool.cs  ObjectsListTool.cs  OffsetTool.cs  ParallelTool.cs  PasteTool.cs  PerpendicularTool.cs  PointTool.cs  PointsCoincidentTool.cs  PolygonTool.cs  RectTool.cs  RedoTool.cs  RemoveTool.cs  RevolveTool.cs  SaveGCodeTool.cs  (+16 more)
Assets/Code/Utils/: CadBin.cs  CameraController.cs  CultureFixer.cs  Encrypton.cs  ExpParser.cs  FullMesh.cs  NoteCADJS.cs  SystemExt.cs  Translate.cs  Translator.cs  UnityExt.cs  Writer.cs
Assets/Code/pb_Stl/: pb_Stl_Importer.cs
Assets/Fonts/: GOST_AU.TTF.bytes  GOSTtypeA.ttf.bytes
Assets/Materials/: Constraints.mat  Image.mat  ImageShader.shader  Lines.mat  Loop.mat  LoopShader.shader  Mesh.mat  Points.mat
Assets/Plugins/: NoteCADUtils.jslib
Assets/Plugins/NativeOCC/: CMakeLists.txt  OccWrapper.cpp  OccWrapper.h
Assets/Prefabs/: ButtonContent.prefab  CADCamera.prefab  Constraint.prefab  DetailEditor.prefab  EntityConfig.prefab  FeatureUI.prefab  Label.prefab  LinePrefab.prefab  LineRendererPrefab.prefab  NoteCADEditor.prefab  PointPrefab.prefab  RuntimeInspectorSettings.asset  SketchLines.prefab  StrokeStyles.prefab
Assets/Prefabs/RuntimeInspector/: ExpressionField.cs  ExpressionField.prefab  RuntimeInspectorSettings.asset
Assets/Scenes/: NoteCAD.unity  NoteCADSettings.lighting  NoteCAM.unity  SketchEditorExample.unity  Test.unity
Assets/TestFiles/: sketch_00.xml
Assets/Tests/EditMode/: EllipticIntegralTests.cs  NoteCAD.Tests.EditMode.asmdef
Manual/: index.html
NoteCAD.Core/: NoteCAD.Core.csproj
NoteCAD.Core/UnityCompat/: RuntimeInspector.cs  Stubs.cs  UnityEngine.cs
NoteCAD.Godot/: .gitignore  Main.cs  Main.tscn  NoteCAD.Godot.csproj  project.godot
ProjectSettings/: EditorBuildSettings.asset  GraphicsSettings.asset  ProjectSettings.asset  QualitySettings.asset
UserSettings/: EditorUserSettings.asset
(+10 files in other folders)
